cert-manager/monitoring/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana2.myhomelab.fr`)
      kind: Rule
      services:
        - name: grafana
          port: 80
  tls:
    secretName: myhomelab-fr-production-tls
